# FlickLang

./: README.md  pyproject.toml
examples/: bubble_sort.fl  functions.fl  hello_world.fl
flicklang/: __init__.py  ast.py  exceptions.py  flicklang.py  interpreter.py  lexer.py  models.py  parser.py  run_flicklang.py
tests/: test.py  test_interpreter.py  test_lexer.py  utils.py
tests/integration_tests/: test_algorithms.py  test_arithmetic.py  test_error_handling.py
tests/unit_tests/: test_interpreter.py  test_lexer.py  test_parser.py
