[tool.poetry]
name = "flicklang"
version = "0.1.0"
description = ""
authors = ["Milan Gittler <gittlermilan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flicklang = 'flicklang.run_flicklang:main'
